--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-i18next": "^13.0.2",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.4",
-    "sass": "^1.63.6"
+    "react-slick": "^0.29.0",
+    "sass": "^1.63.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
