--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.2",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.4",
     "react-slick": "^0.29.0",
